# rethinking-theory-of-post-training-in-llm-experiment

./: DDO_RM_workshop.ipynb  README.md  pyproject.toml  requirements.txt
configs/data/: reasoning_gsm8k.yaml  ultrafeedback_4candidate.yaml  ultrafeedback_binarized.yaml
configs/experiments/: exp0_reproduce_dpo_reference.yaml  exp1_same_rm_ppo_vs_ddorm.yaml  exp2_coverage_curve.yaml  exp3_candidate_generator_comparison.yaml  exp4_reward_noise_sweep.yaml  exp5_reranking_ablation.yaml  exp6_original_ultrafeedback_listwise.yaml  exp7_opd_comparison.yaml  exp8_reasoning_grpo.yaml  exp9_scaling.yaml
configs/model/: pythia410m.yaml  qwen_small.yaml  tinyllama.yaml
configs/train/: ddorm.yaml  dpo.yaml  grpo.yaml  opd.yaml  ppo_rlhf.yaml  reward_model.yaml  sft.yaml
docs/: CODE_SKELETON.md  DDO_RM_MINIMAL_WORKSHOP_README.md  EXPERIMENT_ROADMAP.md  WORKLOAD.md
experiments/: exp1_real_coverage_curve.py  exp2_support_comparison.py  exp3_same_rm_ppo.py  exp4_rerank_ablation.py  exp5_reward_noise.py
scripts/: run_all_oral_suite.sh  run_exp0_reference.sh  run_exp1_same_rm.sh  run_exp2_coverage.sh  run_exp3_generators.sh  run_exp4_reward_noise.sh  run_exp5_rerank_ablation.sh  run_exp6_listwise.sh  run_exp7_opd.sh  run_exp8_reasoning.sh  smoke_core_math.py
src/ddorm/: __init__.py  __main__.py  cli.py
src/ddorm/candidates/: __init__.py  beam.py  diverse_beam.py  opd_guided.py  reward_diverse.py  sampling.py
src/ddorm/data/: __init__.py  build_multicandidate.py  (+3 more)
src/ddorm_coverage/: __init__.py  candidates.py  coverage.py  metrics.py  targets.py
tests/: test_core.py
(+32 files in other folders)
